syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message StartMessage {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message ResponseMessage {
    int64 value = 1;
}

message Empty {}

service RemoteNumberGenerateService {
    rpc generateNumber(StartMessage) returns (stream ResponseMessage);
}
